Implemented Firebase authentication using email and password
Added a progress dialog to suspend user interaction while authent-
-ication takes place.

Added logout to DeleteVideoActivity and AddVideoActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#AD3A12</color>
+    <!--dark orange-->
+    <!--<color name="colorPrimaryDark">#AD3A12</color>-->
+    <!--foxdigital gray-->
+    <color name="colorPrimaryDark">#7C7C7C</color>
     <color name="colorAccent">#D81B60</color>
     <color name="navy">#021430</color>
 </resources>
