removed offer link and added payout
fixed scrolling

--- a/app/src/main/res/layout/activity_update_database.xml
+++ b/app/src/main/res/layout/activity_update_database.xml
@@ -1,156 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:background="#ffffff"
-              android:padding="20dp"
-              android:id="@+id/UpdateLayout"
-              tools:context="com.brainberry.foxdigital.AddVideoActivity">
+
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+
+        tools:context="com.brainberry.foxdigital.AddVideoActivity">
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp">
-        <TextView
-            android:textSize="15sp"
-            android:textColor="#359712"
-            android:text="@string/title"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/editTextTitle"
-            android:textColor="#000000"
-            android:textColorHint="#754698"
-            android:hint="@string/enter_video_title_here"
-            android:layout_weight="4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="#ffffff"
+            android:padding="20dp"
+            android:id="@+id/UpdateLayout">
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp">
+            <TextView
+                    android:textSize="15sp"
+                    android:textColor="#359712"
+                    android:text="@string/title"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
+            <EditText
+                    android:id="@+id/editTextTitle"
+                    android:textColor="#000000"
+                    android:textColorHint="#754698"
+                    android:hint="@string/enter_video_title_here"
+                    android:layout_weight="4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
 
+        </LinearLayout>
+        <LinearLayout
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+
+                    android:textSize="15sp"
+                    android:textColor="#359712"
+                    android:text="@string/description"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
+            <EditText
+                    android:id="@+id/editTextDescription"
+                    android:textColor="#000000"
+                    android:textColorHint="#754698"
+                    android:hint="@string/description"
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+        <LinearLayout
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:textSize="15sp"
+                    android:textColor="#359712"
+                    android:text="@string/video_link"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
+            <EditText
+                    android:id="@+id/editTextVideoLink"
+                    android:textColor="#000000"
+                    android:textColorHint="#754698"
+                    android:hint="@string/video_link"
+                    android:layout_weight="4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:textSize="15sp"
+                    android:textColor="#359712"
+                    android:text="@string/link_1"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
+            <EditText
+                    android:id="@+id/editTextLink1"
+                    android:textColor="#000000"
+                    android:textColorHint="#754698"
+                    android:hint="@string/link_1"
+                    android:layout_weight="4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:textSize="15sp"
+                    android:textColor="#359712"
+                    android:text="@string/link_2"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
+            <EditText
+                    android:id="@+id/editTextLink2"
+                    android:textColor="#000000"
+                    android:textColorHint="#754698"
+                    android:hint="@string/link_2"
+                    android:layout_weight="4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:textSize="15sp"
+                    android:textColor="#359712"
+                    android:text="@string/payout"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
+            <EditText
+                    android:id="@+id/editTextPayout"
+                    android:textColor="#000000"
+                    android:textColorHint="#754698"
+                    android:hint="@string/payout"
+                    android:layout_weight="4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <Button
+                android:onClick="buttonUpdateOnClick"
+                android:text="@string/update"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:layout_marginTop="20dp"/>
     </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-
-            android:textSize="15sp"
-            android:textColor="#359712"
-            android:text="@string/description"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/editTextDescription"
-            android:textColor="#000000"
-            android:textColorHint="#754698"
-            android:hint="@string/description"
-            android:layout_weight="3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:textSize="15sp"
-            android:textColor="#359712"
-            android:text="@string/video_link"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/editTextVideoLink"
-            android:textColor="#000000"
-            android:textColorHint="#754698"
-            android:hint="@string/video_link"
-            android:layout_weight="4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:textSize="15sp"
-            android:textColor="#359712"
-            android:text="@string/link_1"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/editTextLink1"
-            android:textColor="#000000"
-            android:textColorHint="#754698"
-            android:hint="@string/link_1"
-            android:layout_weight="4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:textSize="15sp"
-            android:textColor="#359712"
-            android:text="@string/link_2"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/editTextLink2"
-            android:textColor="#000000"
-            android:textColorHint="#754698"
-            android:hint="@string/link_2"
-            android:layout_weight="4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:textSize="15sp"
-            android:textColor="#359712"
-            android:text="@string/offer_link"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/editTextOfferLink"
-            android:textColor="#000000"
-            android:textColorHint="#754698"
-            android:hint="@string/offer_link"
-            android:layout_weight="4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    <Button
-        android:onClick="buttonUpdateOnClick"
-        android:text="@string/update"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:layout_marginTop="20dp"/>
-</LinearLayout>
+</ScrollView>
